appId: app.vaultaire.ios
---
# Toggle app settings
- runFlow: ../helpers/launch_test_mode.yaml
- runFlow: ../helpers/navigate_to_app_settings.yaml

# Toggle pattern feedback
- tapOn:
    id: "app_pattern_feedback"

# Toggle analytics
- tapOn:
    id: "app_analytics_toggle"

# Toggle back
- tapOn:
    id: "app_pattern_feedback"
- tapOn:
    id: "app_analytics_toggle"
